syntax = "proto3";
package ServiceManagerPackage;

option go_package = "github.com/ghosthookcc/HomeAutomatonKit/app/ServiceManager/proto-stubs/impl/go/service_manager";

import "service.proto";

service ServiceManager
{
    rpc Register(BaseHeartbeat) returns (google.protobuf.Empty);
    rpc ReportState(BaseState) returns (google.protobuf.Empty);
}