syntax = "proto3";
package ServicePackage;

option go_package = "../servicemanager";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Service 
{
    rpc getState (baseReply) returns (State);

    rpc isAlive (baseReply) returns (State);
    rpc connect (baseReply) returns (State);
    rpc disconnect (baseReply) returns (State);
    rpc propagateCachedLogs (baseReply) returns (google.protobuf.Empty);
    rpc getCurrentStatus (baseReply) returns (google.protobuf.Empty);
}

enum currentState 
{
    ALIVE = 0;
    DEAD = 1;
    CONNECTING = 2;
    DISCONNECTING = 3;
    RECONNECTING = 4;
    ERROR = 5;
}

message State 
{
    baseReply descriptor = 1;
    currentState state = 2;
}

message baseReply 
{
    int32 id = 1;
    google.protobuf.Timestamp lastUpdated = 2;
}
